--- a/Proyecto_EE501/EE501MVP.csproj
+++ b/Proyecto_EE501/EE501MVP.csproj
@@ -54,15 +54,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Views\Alumnos\AgregarAlumno.cs" />
+    <Compile Include="Views\Alumnos\AgregarAlumno.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Views\Alumnos\AgregarAlumno.Designer.cs">
       <DependentUpon>AgregarAlumno.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Alumnos\AlumnosHome.cs" />
-    <Compile Include="Views\Alumnos\AlumnosHome.Designer.cs">
-      <DependentUpon>AlumnosHome.cs</DependentUpon>
+    <Compile Include="Views\Alumnos\BuscarAlumno.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Alumnos\BuscarAlumno.cs" />
     <Compile Include="Views\Alumnos\BuscarAlumno.Designer.cs">
       <DependentUpon>BuscarAlumno.cs</DependentUpon>
     </Compile>
@@ -72,7 +72,9 @@
     <Compile Include="Views\Documentos\DocumentosHome.Designer.cs">
       <DependentUpon>DocumentosHome.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Login.cs" />
+    <Compile Include="Views\Login.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Views\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
@@ -99,12 +101,6 @@
     <EmbeddedResource Include="Views\Alumnos\AgregarAlumno.resx">
       <DependentUpon>AgregarAlumno.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Alumnos\AlumnosHome.aa.resx">
-      <DependentUpon>AlumnosHome.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\Alumnos\AlumnosHome.resx">
-      <DependentUpon>AlumnosHome.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Views\Alumnos\BuscarAlumno.resx">
       <DependentUpon>BuscarAlumno.cs</DependentUpon>
     </EmbeddedResource>
@@ -128,7 +124,9 @@
       <DependentUpon>TrayectoriaHome.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
