fake CRUD de alumno realizado

--- a/Proyecto_EE501/EE501MVP.csproj
+++ b/Proyecto_EE501/EE501MVP.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AlumnoModel.cs" />
     <Compile Include="Views\Alumnos\AgregarAlumno.cs">
       <SubType>Form</SubType>
     </Compile>
