--- a/Proyecto_EE501/EE501MVP.csproj
+++ b/Proyecto_EE501/EE501MVP.csproj
@@ -137,6 +137,9 @@
   <ItemGroup>
     <None Include="Resources\SV_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\Grupos\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
