--- a/Proyecto_EE501/EE501MVP.csproj
+++ b/Proyecto_EE501/EE501MVP.csproj
@@ -101,6 +101,12 @@
     <Compile Include="Views\MainView.Designer.cs">
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Practicas\PracticasHome.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Practicas\PracticasHome.Designer.cs">
+      <DependentUpon>PracticasHome.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Views\Alumnos\BuscarAlumno.resx">
       <DependentUpon>BuscarAlumno.cs</DependentUpon>
     </EmbeddedResource>
@@ -131,6 +137,9 @@
     </Compile>
     <EmbeddedResource Include="Views\MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Practicas\PracticasHome.resx">
+      <DependentUpon>PracticasHome.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config">
