--- a/Proyecto_EE501/EE501MVP.csproj
+++ b/Proyecto_EE501/EE501MVP.csproj
@@ -161,6 +161,12 @@
   <ItemGroup>
     <None Include="Resources\logo501.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WhatsApp_Image_2022-10-13_at_18.53.41-removebg-preview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\goku pelado.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
